--- a/info/index.html
+++ b/info/index.html
@@ -20,9 +20,16 @@
 
         <!-- Nav -->
         <nav>
-            <img class="menu" src="../content/bg.webp" height="50" width="50"/>
-            <h1 class="">Studenternes Kunstforening Sjælland -
-                Stedet du aldrig glemmer!</h1>
+            <img class="menu" src="../content/Menu.png" height="50" width="50"/>
+            <div>
+                <h1 >
+                    Studenternes Kunstforening Sjælland
+                </h1>
+                <p>
+                    Stedet du aldrig glemmer!
+                </p>
+            </div>
+
         </nav>
         <!-- Info Boks -->
 
@@ -30,6 +37,8 @@
             <h1 class="fade-in">
                 Oplev Art Nouveau Verdenen
             </h1>
+            <br>
+            <br>
             <p class="fade-in">
                 Velkommen til Studenternes Kunstforening Sjælland! Vi er glade for at præsentere vores temamåned, som i juni 2025 vil fokusere på Art Nouveau. Vi vil meget gerne invitere dig til at deltage i denne spændende måned sammen med dine medstuderende – eller hvis du er tidligere studerende, er du også hjertelig velkommen!
             </p>
@@ -37,24 +46,25 @@
 
         <!-- Billed Boks -->
         <div class="container-picparent">
-            <div class="container-picparent">
 
-            </div>
-            <div class="container-picchild">
-                <img src="../content/bg.webp" height="400" width="200"/>
+            <a href="#" class="container-picchild">
+                <img src="../content/BtnImg1.webp"/>
+                <p class="centered">Book Nu</p>
+            </a>
 
-            </div>
-            <div class="container-picchild">
-                <img src="../content/bg.webp" height="400" width="200"/>
+            <a href="#" class="container-picchild">
+                <img src="../content/BtnImg2.webp"/>
+                <p class="centered">Åbningstider</p>
+            </a>
 
-            </div>
-            <div class="container-picchild">
-                <img src="../content/bg.webp" height="400" width="200"/>
+            <a href="#" class="container-picchild">
+                <img src="../content/BtnImg3.webp"/>
+                <p class="centered">Læs Mere </p>
+            </a>
 
-            </div>
         </div>
-    </div>
 
+    <!-- Parallax Effekt -->
     <script>
         (function() {
             document.addEventListener("mousemove", parallax);
