--- a/info/index.html
+++ b/info/index.html
@@ -8,7 +8,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="../styles/style.css">
 
+    <!-- GoogleFont Import -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kite+One">
+
 </head>
+
 <body id="container">
 
     <div class="hero">
